fix for headlines on mobile and visual alignment adjustments

--- a/src/styles/components/steps/step-2.styl
+++ b/src/styles/components/steps/step-2.styl
@@ -26,7 +26,7 @@
   .splash__headline
     // position fixed
     opacity 1
-    transform translate3d(0, 20vh, 0)
+    transform translate3d(0, -80vh, 0)
 
 &.is-step-4 #step-2,
 &.is-step-5 #step-2,
@@ -37,3 +37,14 @@
 
   .splash__headline
     transform translate3d(0, -100vh, 0)
+
+@media all and (min-width 800px)
+
+  &.is-step-2 #step-2,
+  &.is-step-3 #step-2
+    opacity 1
+
+    .splash__headline
+      // position fixed
+      opacity 1
+      transform translate3d(0, 20vh, 0)
