--- a/src/styles/components/steps/step-3.styl
+++ b/src/styles/components/steps/step-3.styl
@@ -4,7 +4,6 @@
 
 &.is-step-3
   background rgba(240,189,60,1)
-  // transition background 50ms ease
 
   &:before
     opacity 0
@@ -36,7 +35,7 @@
     transform translate3d(0, -100vh, 0)
 
 
-@media all and (min-height 650px)
+@media all and (min-height 650px and min-width 800px)
 
   #step-3
 
