--- a/src/styles/components/visuals/intro.styl
+++ b/src/styles/components/visuals/intro.styl
@@ -82,8 +82,9 @@ $phone_height = 390
   transition opacity 500ms ease, transform 1000ms ease
   z-index 90
 
-  // / .splash.is-step-1 &
-    // transform translate3d(0, 0, 0)
+  / .splash.is-step-1 &
+    opacity 1
+    transform translate3d(0, 0, 0)
 
   / .splash.is-step-2 &
     opacity 0
@@ -137,7 +138,7 @@ $phone_height = 390
 
 &__core
   position absolute
-  bottom 10.2%
+  bottom 9.3%
   left 22%
   background-image url('/images/Core.png')
   background-size contain
@@ -169,7 +170,7 @@ $phone_height = 390
     transition-delay 400ms, 0ms
 
   / .splash.is-step-6 &
-    left -3%
+    left -2.5%
     opacity 1
     transition-property transform, opacity, left
     transition-delay 300ms, 0ms, 3500ms
@@ -192,7 +193,7 @@ $phone_height = 390
   / .splash.is-step-1 &
   / .splash.is-step-2 &
   / .splash.is-step-3 &
-    opacity 1
+    opacity 0
     left 36%
     transform translate3d(0, 0, 0)
 
@@ -203,6 +204,7 @@ $phone_height = 390
 
   / .splash.is-step-5 &
     left 36%
+    opacity 1
     transform translate3d(0, -100vh, 0)
     transition transform 1500ms ease, left 550ms ease, opacity 1500ms ease
     transition-property transform, left, opacity
@@ -210,9 +212,9 @@ $phone_height = 390
 
   / .splash.is-step-6 &
     left 12.5%
-    opacity 1
+    opacity 0
     transition-property transform, opacity, left
-    transition-delay 300ms, 0ms, 3500ms
+    transition-delay 300ms, 3s, 3500ms
 
 &__battery
   position absolute
@@ -251,52 +253,84 @@ $phone_height = 390
 
   / .splash.is-step-6 &
     left -15%
-    opacity 1
+    opacity 0
     transition-property transform, opacity, left
-    transition-delay 300ms, 0ms, 3000ms
+    transition-delay 300ms, 2000ms, 3000ms
 
 
 &__wax
   position absolute
   bottom 10.2%
-  // left (((1200 - $candle_width) / 2) / 1200) * 100%
   right 0
   left 0
   margin auto
-  background-image url('/images/WaxInsert.png')
+  background-image url('/images/Wax_Insert.png')
   background-size contain
   background-repeat no-repeat
   background-position 50%
-  width 25%
-  // height ($candle_height / 720) * 100%
+  width 55%
   height 44%
-  transition transform 500ms ease, left 550ms ease, opacity 1500ms ease
   opacity 0
   transform translate3d(0, 0, 0)
+  transition transform 500ms ease, left 550ms ease, opacity 1500ms ease
+  transition-property transform, left, opacity
   z-index 70
 
-  // / .splash.is-step-1 &,
-  // / .splash.is-step-2 &,
-  // / .splash.is-step-3 &,
   / .splash.is-step-4 &,
-  / .splash.is-step-5 &,
   / .splash.is-step-6 &
     opacity 1
 
   / .splash.is-step-5 &
-    transition transform 1500ms ease, left 550ms ease
-    transition-property transform, left
-    transition-delay 700ms, 0ms
+    opacity 0
 
   / .splash.is-step-6 &
     left -50%
-    opacity 1
     transition-property transform, left
     transition-delay 500ms, 3500ms
 
+&__wax-with-flame
+  position absolute
+  bottom 10.2%
+  right 0
+  left 0
+  margin auto
+  background-image url('/images/wick_wax_flame.png')
+  background-size contain
+  background-repeat no-repeat
+  background-position 50%
+  width 55%
+  // height 44%
+  height 55%
+  transition opacity 1500ms ease
+  transition-delay 380ms
+  opacity 0
+  transform translate3d(0, 0, 0)
+  z-index 70
+
+  / .splash.is-step-1 &,
+  / .splash.is-step-2 &,
+  / .splash.is-step-3 &,
+  / .splash.is-step-4 &,
+  / .splash.is-step-6 &
+    opacity 0
+
+  / .splash.is-step-5 &
+    opacity 1
+    // width 25%
+    // transition transform 1500ms ease, left 550ms ease
+    // transition-property transform, left
+    // transition-delay 700ms, 0ms
+
+  / .splash.is-step-6 &
+    opacity 0
+    // left -50%
+    // opacity 1
+    // transition-property transform, left
+    // transition-delay 500ms, 3500ms
+
 &__wick
   position absolute
-  bottom 50%
+  bottom 47%
   left (((1200 - $candle_width) / 2) / 1200) * 100%
   background-image url('/images/Wick.png')
   background-size contain
@@ -334,7 +368,7 @@ $phone_height = 390
 
 &__wax-flame
   position absolute
-  bottom 52%
+  bottom 49%
   left (((1200 - $candle_width) / 2) / 1200) * 100%
   background-image url('/images/flame.png')
   background-size contain
@@ -367,16 +401,16 @@ $phone_height = 390
 
 &__shell
   position absolute
-  bottom 5%
+  bottom 10%
   left (((1200 - $candle_width) / 2.6) / 1200) * 100%
-  background-image url('/images/Shell_1.png')
+  background-image url('/images/candle_colors/ivory-shell-full.png')
   background-size contain
   background-repeat no-repeat
   background-position 50%
   width ((($candle_width) / 1200) * 2) * 100%
   // height ($candle_height / 720) * 100%
   height 53%
-  transition transform 1500ms ease, left 550ms ease
+  transition transform 1500ms ease, left 550ms ease, background 1s ease
   opacity 0
   transform translate3d(0, -100vh, 0)
   z-index 110
@@ -390,11 +424,21 @@ $phone_height = 390
 
   / .splash.is-step-6 &
     left (((1200 - ($candle_width)) / 16) / 1200) * 100%
-    // background-image url('/images/Shell_1.png')
     opacity 1
     transform translate3d(0, 0, 0)
     transition-property transform, left
     transition-delay 1300ms, 3500ms
+
+  &.is-green
+    background-image url('/images/candle_colors/green-shell-full.png')
+  &.is-blue
+    background-image url('/images/candle_colors/blue-shell-full.png')
+  &.is-red
+    background-image url('/images/candle_colors/red-shell-full.png')
+  &.is-purple
+    background-image url('/images/candle_colors/purple-shell-full.png')
+  &.is-orange
+    background-image url('/images/candle_colors/orange-shell-full.png')
 
 .arrow-left
   width 0
@@ -420,7 +464,7 @@ $phone_height = 390
   transition opacity 1500ms ease, left 550ms ease
   opacity 0
   // transform translate3d(0, -100vh, 0)
-  z-index 20
+  // z-index 20
   color #211d1c
 
   / .splash.is-step-5 &
@@ -462,9 +506,15 @@ $phone_height = 390
 .swatch
   display inline-block
   background #000
-  max-width 35px
+  width 30%
+  // max-width 35px
   margin-bottom 10px
   box-shadow 2px 2px 10px rgba(0,0,0,0.4)
+  cursor pointer
+  z-index 200
+
+  img
+    width 100%
 
   &__name
     padding 3px 7px
@@ -495,6 +545,7 @@ $phone_height = 390
   &__core
     left 40%
     width 20%
+    bottom 10.1%
 
     / .splash.is-step-6 &
       left 26.6%
@@ -533,6 +584,9 @@ $phone_height = 390
     / .splash.is-step-7 &
       left 36%
 
+    / .splash.is-step-5 &
+      opacity 1
+
     / .splash.is-step-6 &
       left 22.5%
 
@@ -543,22 +597,37 @@ $phone_height = 390
     / .splash.is-step-6 &
       left -26.5%
 
-  &__wick
-    left (((1200 - ($candle_width)) / 2) / 1200) * 100%
+  &__wax-with-flame
+    left 0
     width (($candle_width) / 1200) * 100%
-    bottom 50%
+
+  &__wick
+    width 2%
+    height 5%
+    right 0
+    left 0
+    margin-right auto
+    margin-left auto
+    // bottom 50%
 
     / .splash.is-step-6 &
       left (((1200 - ($candle_width)) / 3) / 1200) * 100%
 
+
   &__wax-flame
     bottom 52%
-    width (($candle_width) / 1200) * 100%
-    height 10%
+    width 1%
+    height 7%
+    right 0
+    left 0
+    margin-right auto
+    margin-left auto
 
   &__shell
     left (((1200 - ($candle_width)) / 2) / 1200) * 100%
-    width (($candle_width) / 1200) * 100%
+    width 20%
+    height 60%
+    bottom 7%
 
 
     / .splash.is-step-6 &
@@ -574,9 +643,13 @@ $phone_height = 390
     font-size 12px
 
   .swatch
-    max-width 71px
+    width 30%
+    max-width 100px
 
     &__name
       font-size 12px
 
-
+@media all and (min-width 1300px)
+  .visuals
+    &__wick
+      bottom 50%
